test/corpus/fail/ignore-unused-actor-identifier.mo
=========
ignore-unused-actor-identifier.mo
=========

actor UnusedActorIdentifier {
};

---

(source_file
  (obj_dec
    (obj_sort)
    (identifier)
    (obj_body)))
